@@ -1,6 +1,6 @@
 <scraperfunctions>
 	<GetFanartTvArtistThumbsByMBID dest="5" clearbuffers="no">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseFanartTvArtistThumbs&quot; cache=&quot;fanarttv-artistimages-\1.json&quot;&gt;http://fanart.tv/webservice/artist/ed4b784f97227358b31ca4dd966a04f1/\1/json/&lt;/url&gt;&lt;/details&gt;" dest="5">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseFanartTvArtistThumbs&quot; cache=&quot;fanarttv-artistimages-\1.json&quot;&gt;http://api.fanart.tv/webservice/artist/ed4b784f97227358b31ca4dd966a04f1/\1/json/&lt;/url&gt;&lt;/details&gt;" dest="5">
 			<expression noclean="1" />
 		</RegExp>
 	</GetFanartTvArtistThumbsByMBID>
@@ -23,7 +23,7 @@
 	</ParseFanartTvArtistThumbs>
 
 	<GetFanartTvArtistFanartsByMBID dest="5" clearbuffers="no">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseFanartTvArtistFanarts&quot; cache=&quot;fanarttv-artistimages-\1.json&quot;&gt;http://fanart.tv/webservice/artist/ed4b784f97227358b31ca4dd966a04f1/\1/json/&lt;/url&gt;&lt;/details&gt;" dest="5">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseFanartTvArtistFanarts&quot; cache=&quot;fanarttv-artistimages-\1.json&quot;&gt;http://api.fanart.tv/webservice/artist/ed4b784f97227358b31ca4dd966a04f1/\1/json/&lt;/url&gt;&lt;/details&gt;" dest="5">
 			<expression noclean="1" />
 		</RegExp>
 	</GetFanartTvArtistFanartsByMBID>
@@ -52,7 +52,7 @@
 	</ParseFanartTvArtistFanarts>
 
 	<GetFanartTvAlbumThumbsByMBID dest="5" clearbuffers="no">
-		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseFanartTvAlbumThumbs&quot; cache=&quot;fanarttv-albumimages-\1.json&quot;&gt;http://fanart.tv/webservice/album/ed4b784f97227358b31ca4dd966a04f1/\1/json/&lt;/url&gt;&lt;/details&gt;" dest="5">
+		<RegExp input="$$1" output="&lt;details&gt;&lt;url function=&quot;ParseFanartTvAlbumThumbs&quot; cache=&quot;fanarttv-albumimages-\1.json&quot;&gt;http://api.fanart.tv/webservice/album/ed4b784f97227358b31ca4dd966a04f1/\1/json/&lt;/url&gt;&lt;/details&gt;" dest="5">
 			<expression noclean="1" />
 		</RegExp>
 	</GetFanartTvAlbumThumbsByMBID>
