@@ -1,3 +1,6 @@
+[B]1.6.0[/B]
+Re-enable fanart.tv scraping by default
+
 [B]1.5.0[/B]
 Added: Scraping album thumbs from theaudiodb.com
 
